@@ -12,6 +12,9 @@ Version 1.8.0
   since this boolean value can be dervived from the length of the
   @valid_repositories list.  From Jason Remillard.
 
+* Use tempfile() in Parser.pm to close a potential security hole, from
+  Jason Remillard.
+
 Version 1.7.8
 
 * If a badly-formatted repository value from codestriker.conf is used
